# spark2026

./: .lychee.toml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  spark_move_plan.sh
adapters/runtime-async-std/: Cargo.toml
adapters/runtime-tokio/: Cargo.toml
adapters/runtime-tokio/tests/: tck.rs
adapters/spark-runtime-glommio-adapter/: Cargo.toml
adapters/spark-runtime-smol-adapter/: Cargo.toml
crates/3p/spark2026-fuzz/: .gitignore  Cargo.toml
crates/codecs/spark-codec-line/: Cargo.toml  README.md
crates/codecs/spark-codec-rtcp/: Cargo.toml  README.md
crates/spark-buffer/: Cargo.toml
crates/spark-buffer/src/: lib.rs  pool.rs  pooled_buffer.rs
crates/spark-buffer/tests/: pool_contract.rs  pooled_buffer_contract.rs
crates/spark-contract-tests/: Cargo.toml  README.md
crates/spark-contract-tests-macros/: Cargo.toml  README.md
crates/spark-contract-tests-macros/src/: lib.rs
crates/spark-contract-tests/src/: backpressure.rs  cancellation.rs  errors.rs  graceful_shutdown.rs  hot_reload.rs  hot_swap.rs  lib.rs  observability.rs  resource_exhaustion.rs  slowloris.rs  state_machine.rs  support.rs
crates/spark-contract-tests/tests/: mock_transport.rs
crates/spark-core/: Cargo.toml  README.md  build.rs
crates/spark-core/benches/: async_contract_overhead.rs  buffer_roundtrip.rs  configuration.rs  zerocopy_extremes.rs
crates/spark-core/examples/: service_macro.rs
crates/spark-core/src/: arc_swap.rs  config.rs  context.rs  contract.rs  deprecation.rs  error.rs  future.rs  lib.rs  limits.rs  macros.rs  model.rs  prelude.rs  protocol.rs  types.rs
crates/spark-core/tests/: codec_limits.rs  concurrency_primitives.rs  contract_tck.rs  dyn_bridge.rs  loom_concurrency.rs  slo_policy_map.rs  state_machine_properties.rs  vectors.rs
crates/spark-examples/: Cargo.toml
crates/spark-examples/src/: lib.rs  server.rs  transport.rs
crates/spark-hosting/: Cargo.toml
crates/spark-hosting/src/: builder.rs  host.rs  lib.rs  pipeline.rs  runtime.rs  service.rs  shutdown.rs
crates/spark-impl-tck/: Cargo.toml  README.md
crates/spark-impl-tck/benches/: tcp_throughput.rs
crates/spark-impl-tck/src/: lib.rs
crates/spark-macros/: Cargo.toml  README.md
crates/spark-macros/src/: lib.rs
crates/spark-middleware/: Cargo.toml
crates/spark-middleware/src/: codec.rs  lib.rs  logging.rs  metrics.rs
crates/spark-otel/: Cargo.toml  README.md
crates/spark-otel/src/: events.rs  facade.rs  health.rs  lib.rs  logging.rs  metrics.rs  resource.rs  trace.rs
crates/spark-otel/tests/: trace_autoinject.rs
crates/spark-pipeline/: Cargo.toml
crates/spark-pipeline/src/: factory.rs  lib.rs  router.rs  router_handler.rs
crates/spark-router/: Cargo.toml
crates/spark-router/src/: lib.rs  pipeline.rs
crates/spark-switch/: Cargo.toml
crates/spark-switch/src/: error.rs  lib.rs
crates/spark-tck/: Cargo.toml  README.md
crates/spark-tck/benches/: tcp_throughput.rs
crates/spark-tck/src/: lib.rs
crates/spark-transport-quic/: Cargo.toml  README.md
crates/spark-transport-quic/src/: backpressure.rs  channel.rs  endpoint.rs  error.rs  lib.rs  util.rs
crates/spark-transport-tcp/: Cargo.toml  README.md
crates/spark-transport-tcp/src/: channel.rs  error.rs  lib.rs  listener.rs  server_channel.rs  util.rs
crates/spark-transport-tls/: Cargo.toml  README.md
crates/spark-transport-tls/src/: acceptor.rs  channel.rs  error.rs  hot_reload.rs  lib.rs  util.rs
examples/tck-mock-transport/: Cargo.toml
spark-codec-line/: Cargo.toml  README.md
spark-codec-line/src/: lib.rs
spark-core/: Cargo.toml  build.rs
spark-core/benches/: async_contract_overhead.rs  buffer_roundtrip.rs  codec.rs  configuration.rs  smoke.rs  zerocopy_extremes.rs
spark-core/src/: arc_swap.rs  backpressure.rs  buffer.rs  common.rs  context.rs  contract.rs  deprecation.rs  distributed.rs  error.rs  future.rs  lib.rs  limits.rs  macros.rs  observability.rs  pipeline.rs  runtime.rs  sealed.rs  service.rs  transport.rs
spark-core/src/audit/: mod.rs
spark-core/src/buffer/: message.rs  mod.rs  pool.rs  readable.rs  writable.rs
spark-core/src/cluster/: backpressure.rs  discovery.rs  flow_control.rs  membership.rs  mod.rs  topology.rs
spark-core/src/codec/: decoder.rs  encoder.rs  metadata.rs  mod.rs  registry.rs
spark-core/src/compat/: flow_ready.rs  mod.rs
spark-core/src/configuration/: builder.rs  change.rs  error.rs  events.rs  key.rs  mod.rs  profile.rs  source.rs  value.rs
spark-core/src/error/: category_matrix.rs
spark-core/src/host/: capability.rs  component.rs  context.rs  lifecycle.rs  mod.rs  provisioning.rs  shutdown.rs
spark-core/src/observability/: attributes.rs  events.rs  facade.rs  health.rs  keys.rs  logging.rs  metrics.rs  mod.rs  trace.rs
spark-core/src/pipeline/: channel.rs  context.rs  controller.rs  default_handlers.rs  extensions.rs  factory.rs  handler.rs  instrument.rs  internal.rs  middleware.rs  mod.rs
spark-core/src/retry/: adaptive.rs  mod.rs
spark-core/src/router/: binding.rs  context.rs  engine.rs  metadata.rs  mod.rs  route.rs
spark-core/src/rt/: mod.rs  sugar.rs
spark-core/src/runtime/: executor.rs  mod.rs  services.rs  task.rs  timeouts.rs  timer.rs
spark-core/src/security/: class.rs  credential.rs  identity.rs  keystore.rs  mod.rs  negotiation.rs  policy.rs
spark-core/src/service/: auto_dyn.rs  metrics.rs  mod.rs  simple.rs
spark-core/src/status/: mod.rs  ready.rs
spark-core/src/time/: clock.rs
spark-core/src/transport/: address.rs  endpoint.rs  factory.rs  handshake.rs  intent.rs  mod.rs  params.rs  server.rs
spark-core/tests/: concurrency_primitives.rs  dyn_bridge.rs  errors_human_hint.rs  hotreload.rs  loom_concurrency.rs  slo_policy_map.rs  state_machine_properties.rs  vectors.rs
spark-core/tests/contracts/: budget.rs  call_context.rs  context_propagation.rs  context_propagation_spawn.rs  error_category_autoresponse.rs  handshake.rs  mod.rs  ready_state_matrix.rs  retry_after.rs  security.rs  service_macro.rs  (+1 more)
tools/fuzz/: Cargo.toml
tools/spark-deprecation-lint/: Cargo.toml
(+613 files in other folders)
