[workspace]
members = [
    "crates/spark-core",
    "crates/codecs/spark-codec-line",
    "crates/codecs/spark-codec-sip",
    "crates/codecs/spark-codec-sdp",
    "crates/codecs/spark-codec-rtp",
    "crates/codecs/spark-codec-rtcp",
    "crates/spark-macros",
    "crates/spark-otel",
    "tools/deprecation-lint",
    "crates/spark-contract-tests",
    "crates/spark-contract-tests-macros",
    "crates/transport/spark-transport-tcp",
    "crates/transport/spark-transport-udp",
    "crates/transport/spark-transport-tls",
    "crates/transport/spark-transport-quic",
    "crates/spark-impl-tck",
]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
authors = ["Gemini 架构组 <architecture@gemini.example>"]

[workspace.dependencies]
tokio = { version = "1.48.0", default-features = false }

[patch.crates-io]
spark-core = { path = "crates/spark-core" }
spark-contract-tests = { path = "crates/spark-contract-tests" }
spark-contract-tests-macros = { path = "crates/spark-contract-tests-macros" }
