[package]
name = "spark-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
authors = ["Gemini 架构组 <architecture@gemini.example>"]
license = "Apache-2.0"
description = "spark-core: 高性能、协议无关、分布式原生的异步通信框架核心契约"

[lib]
name = "spark_core"
path = "src/lib.rs"
bench = false

[features]
default = ["std"]
# 兼容功能开关：默认关闭，后续按业务域逐步启用旧版信号的适配层。
compat_v0 = []
# 所有 API 契约均依赖 `alloc` 类型（Box/Arc/Vec）；禁用 `alloc` 无法构建对象安全 Future/Stream。
alloc = []
std = ["alloc", "serde_json"]
loom-model = ["dep:loom"]

[dependencies]
async-trait = { version = "0.1", default-features = false }
spark-macros = { path = "../crates/spark-macros" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
sha2 = { version = "0.10", default-features = false }
serde_json = { version = "1.0", optional = true }
loom = { version = "0.7", default-features = false, optional = true }
spin = { version = "0.9", default-features = false, features = ["rwlock", "mutex", "spin_mutex"] }
arc-swap = { version = "1.7", default-features = false }

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"
thiserror = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[[bench]]
name = "codec"
harness = false
[[bench]]
name = "smoke"
harness = false

[[bench]]
name = "configuration"
harness = false

[[bench]]
name = "buffer_roundtrip"
harness = false

[[bench]]
name = "async_contract_overhead"
harness = false

# 单独注册服务宏相关契约测试，避免引入完整 `contracts` 套件对内部模块的访问依赖。
[[test]]
name = "contracts_service_macro"
path = "tests/contracts/service_macro.rs"

[[test]]
name = "pipeline"
path = "tests/pipeline/mod.rs"

[[bin]]
name = "audit_replay"
path = "src/bin/audit_replay.rs"
required-features = ["std"]
bench = false
test = false
