[package]
name = "spark-runtime-smol-adapter"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "smol 运行时上的 spark-contract-tests 适配层 TCK 驱动"

[workspace]
members = []

[dev-dependencies]
smol = "1.3"
spark-core = { path = "../../crates/spark-core" }
spark-contract-tests = { path = "../../crates/spark-contract-tests" }

[patch.crates-io]
spark-core = { path = "../../crates/spark-core" }
spark-contract-tests = { path = "../../crates/spark-contract-tests" }
spark-contract-tests-macros = { path = "../../crates/spark-contract-tests-macros" }
