[package]
name = "spark-buffer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "spark-buffer: 面向 spark-core 缓冲池的零拷贝缓冲实现"

[lib]
bench = false

[features]
default = ["std"]
std = ["spark-core/std"]
alloc = ["spark-core/alloc", "std"]

[dependencies]
bytes = { workspace = true }
spark-core = { workspace = true, default-features = false }
spin = { workspace = true, default-features = false, features = ["mutex"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(spark_loom)'] }
