[package]
name = "spark-contract-tests-macros"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Gemini 架构组 <architecture@gemini.example>"]
description = "Attribute macro for Spark contract TCK suites"

[lib]
proc-macro = true
path = "src/lib.rs"
bench = false

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
