[package]
name = "spark-contract-tests-macros"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
authors = ["Gemini 架构组 <architecture@gemini.example>"]
description = "Attribute macro for Spark contract TCK suites"

[lib]
proc-macro = true
path = "src/lib.rs"
bench = false

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
