[package]
name = "spark-examples"
version = "0.1.0"
edition.workspace = true
rust-version = "1.89"
authors = ["Gemini 架构组 <architecture@gemini.example>"]
license = "Apache-2.0"
description = "spark-examples: Spark 栈演示与诊断工具二进制集合"

[[bin]]
name = "audit_replay"
path = "src/bin/audit_replay.rs"
bench = false
test = false

[[bin]]
name = "cancel_deadline_slo"
path = "src/bin/cancel_deadline_slo.rs"
bench = false
test = false

[dependencies]
spark-core = { workspace = true, default-features = false, features = ["std", "std_json"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(spark_loom)'] }
