[package]
name = "spark-impl-tck"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[features]
default = []
transport-tests = []
rtp-tests = []

[lib]
# `cargo bench -- --quick` 会向所有基于 `libtest` 的单元测试传递额外参数，
# `spark-impl-tck` 不提供基准测试入口，因此禁用基准运行以避免参数解析失败。
bench = false

[dependencies]
spark-core = { path = "../spark-core" }
spark-codec-sip = { path = "../codecs/spark-codec-sip" }

[dev-dependencies]
spark-transport-tcp = { path = "../transport/spark-transport-tcp" }
spark-transport-udp = { path = "../transport/spark-transport-udp", features = ["batch-udp-unix"] }
spark-transport-tls = { path = "../transport/spark-transport-tls" }
spark-transport-quic = { path = "../transport/spark-transport-quic" }
anyhow = "1.0"
quinn = "0.11"
rustls-pki-types = "1.12"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net", "io-util", "sync"] }
tokio-rustls = "0.26"
rcgen = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spark-codec-rtp = { path = "../codecs/spark-codec-rtp" }
spark-codec-sdp = { path = "../codecs/spark-codec-sdp" }
rustls = { version = "0.23", default-features = false, features = ["std"] }
hex = "0.4"
spark-codec-rtcp = { path = "../codecs/spark-codec-rtcp" }

[[bench]]
name = "tcp_throughput"
harness = false
