[package]
name = "spark-pipeline"
version = "0.1.0"
edition.workspace = true
rust-version = "1.89"
authors = ["Gemini 架构组 <architecture@gemini.example>"]
license = "Apache-2.0"
description = "spark-pipeline: 热插拔 Controller 实现与中间件装配入口"

[features]
default = ["alloc"]
alloc = ["spark-core/alloc"]
std = ["alloc", "spark-core/std"]

[lib]
bench = false

[dependencies]
spark-core = { workspace = true, default-features = false }
